Font mixin. Fixes to font-family mixin. Moved .truncate() mixin to mixins.less.

--- a/turret/mixins/font.less
+++ b/turret/mixins/font.less
@@ -1,35 +1,60 @@
 /*
- * Typography
+ * Font
  */
- 
-//Font Family
-.font-family(@font-family, @font-weight) {
-	font-family: @font-family;
-	font-weight: @font-weight;
+
+// Font
+.font(@family, @weight, @size) {
+	font-family: @family;
+	font-weight: @weight;
+	font-size: @size;
+}
+
+
+// Font Family
+.font-family(@family, @weight) {
+	font-family: @family;
+	font-weight: @weight;
 	font-style: normal;
 }
 
+// Font Size
+.font-size(@rem) {
+	font-size: ~"@{rem}rem";
+}
+
+// Font Size Pixels
+.font-size-pixel(@rem) {
+	@pixels: (@rem * 10);
+	font-size: ~"@{pixels}px"; 
+	font-size: ~"@{rem}rem";
+}
+
+// Thin Font
 .thin-font() {
 	.font-family(@thin-font-family, @thin-font-weight);
 }
 
+// Regular Font
 .regular-font() {
 	.font-family(@regular-font-family, @regular-font-weight);
 }
 
+// Medium Font
 .medium-font() {
 	.font-family(@medium-font-family, @medium-font-weight);
 }
 
+// Semibold Font
 .semibold-font() {
 	.font-family(@semibold-font-family, @semibold-font-weight);
 }
 
+// Bold Font
 .bold-font() {
 	.font-family(@bold-font-family, @bold-font-weight);
 }
 
-//Font Face
+// Font Face
 .font-face(@family: arial, @weight: normal, @style: normal) {
 	@font-face {
 		font-family: '@{family}';
@@ -42,24 +67,4 @@
 		font-weight: @weight;
 		font-style: @style;
 	}
-}
-
-//Font Size
-.font-size(@rem) {
-	font-size: ~"@{rem}rem";
-}
-
-//Font Size Pixels
-.font-size-pixel(@rem) {
-	@pixels: (@rem * 10);
-	font-size: ~"@{pixels}px"; 
-	font-size: ~"@{rem}rem";
-}
-
-//Truncate
-.truncate() {
-	display: block;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
